--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -7,3 +7,111 @@
 
 
 // STRUCTURE
+
+
+// Styled Components
+
+#ContactForm {
+
+	.inputgroupbig {
+		float: left;
+		width: 100%;
+	}  
+
+	.inputgroupsmall {
+
+	  float: left;
+	  width: 100%;
+
+	  @media (min-width: 1024px) {
+	    width: 47%;
+	    margin-left: 0%;
+
+	    :nth-of-type(2) {
+	     	margin-left: 6%;
+	    }
+	  }
+	}
+
+	label {
+		margin-top: 30px;
+		display: block;
+	}
+
+	input {
+		display: block;
+		width: 100%;
+		background-color: #f1f1f1;
+		font-size: 16px;
+		padding: 10px;
+		margin: 10px 0px;
+		border: none;
+		border-left: #666 1px solid;
+		outline: none;
+		
+		:focus {
+			border-left: #666 2px solid;
+		}
+		:invalid {
+			border-left: #a00 2px solid;
+		}
+		:valid {
+			border-left: #0a0 2px solid;
+		}
+	}  
+
+	textarea {
+		display: block;
+		width: 100%;
+		background-color: #f1f1f1;
+		font-size: 16px;
+		padding: 10px 10px;
+		margin: 10px 0px;
+		border: none;
+		border-left: #666 1px solid;
+		outline: none;
+		
+		:focus {
+			border-left: #666 2px solid;
+		}
+		:invalid {
+			border-left: #a00 2px solid;
+		}
+		:valid {
+			border-left: #0a0 2px solid;
+		}
+
+	}
+
+	.button:hover, .button:focus, {
+	  background: rgb(179, 184, 32)
+	}
+
+	.formstatus {
+
+		display: inline;
+		margin-left: 1em;
+		
+		span:before {
+			display: inline-block;
+			font-style: normal;
+			font-variant: normal;
+			text-rendering: auto;
+			-webkit-font-smoothing: antialiased;
+			font-family: Font Awesome\ 5 Free;
+			font-weight: 900;
+			margin-right: 0.5em;
+		}
+	}
+	.form-success span:before {
+		content: "\f058";
+		color: $primarycolor;
+	}
+	.form-failed span:before {
+		content: "\f057";
+		color: #933;
+	}
+	.form-sending span:before {
+		content: "\f110";
+	}
+}
