--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,7 +67,7 @@ h3 {
   font-size: 18pt;
 }
 
-p, span, a, h4, time {
+p, span, a, h4, time, button {
   color: #666;
   margin: 10px 0;
   font-size: 14pt;
@@ -83,6 +83,12 @@ p, span, a, h4, time {
 .text img {
   width: 100%;
   max-width: 600px;
+}
+
+button {
+  box-shadow: none;
+  outline: none;
+  border: 0px;
 }
 
 .button, .button:hover, .button:focus, .button:active {
