add content type page

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -11,6 +11,35 @@
 
 // Styled Components
 
+.contactdetails {
+
+	> div {
+		border-left: 3px $primarycolor solid;
+		padding-left: 20px;
+
+		span {
+			display: block;
+		}
+		
+		.contact-name {
+			font-weight: 900;
+			color: $primarycolor;
+		}
+
+		.contact-phone:before {
+			content: "\f098";
+			margin-right: 0.2em;
+		}
+
+		.contact-address:before {
+			content: "\f015";
+			margin-right: 0.2em;
+		}
+
+	}
+
+}
+
 #ContactForm {
 
 	.inputgroupbig {
@@ -91,7 +120,7 @@
 
 		display: inline;
 		margin-left: 1em;
-		
+
 		span:before {
 			display: inline-block;
 			font-style: normal;
