--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,7 +58,7 @@ h1 {
 
 h2 {
   color: $secondarycolor;
-  font-size: 28pt;
+  font-size: 24pt;
 }
 
 h3 {
@@ -67,7 +67,7 @@ h3 {
   font-size: 18pt;
 }
 
-p, span, a, h4, time, button {
+p, span, a, h4, time, button, label {
   color: #666;
   margin: 10px 0;
   font-size: 14pt;
@@ -735,13 +735,25 @@ button:hover, button:focus, {
 // ======
 
 #Footer {
-  /*position: fixed;
-  bottom: 0px;
-  */
-  display: none;
+  margin-top: 60px;
   width: 100%;
   background-color: #333;
   color: #666;
-  padding: 20px 0;
+  padding: 40px 0;
   font-size: 12px;
+  overflow-y: hidden;
+  
+  span {
+    float: left;
+  }
+
+  .legal {
+    float: right;
+    margin-left: 0.5em;
+    transition: color 0.3s;
+
+    &:hover, &:focus {
+      color: #999;
+    }
+  }
 }
