gebetsanliegen feld geändert

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -102,8 +102,8 @@ button {
 
 }
 
-button:hover, button:focus, {
-  background: rgb(179, 184, 32)
+button:hover, button:focus {
+  background: rgb(179, 184, 32);
 }
 
 .readmore, .readmore:hover, .readmore:focus, .readmore:visited {
@@ -449,10 +449,6 @@ button:hover, button:focus, {
       img {
         border-radius: $borderradius1;
       }
-
-      a {
-        margin-left: 0.5em;
-      }
     }
   }
 
@@ -462,7 +458,7 @@ button:hover, button:focus, {
   }
 
   .button-primary:hover,
-  .button-primary:focus,{
+  .button-primary:focus {
     background-color: $secondarycolor;
   }
 }
@@ -489,6 +485,19 @@ button:hover, button:focus, {
   // hover / focus effect
   .button-primary:hover, .button-primary:focus {
     opacity: 0.85;
+  }
+}
+
+.sidebar-card {
+  padding: 0;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+  }
+
+  .sidebar-content {
+    padding: 40px 20px;
   }
 }
 
@@ -581,19 +590,15 @@ button:hover, button:focus, {
 #GebetsanliegenOverview {
   background-color: $primarycolor;
 
-  .eventinfo {
-    cursor: default;
+  p:last-of-type {
+    margin-bottom: 40px;
   }
 
-  .eventinfo .eventdate span {
+  .button-primary, .button-primary:hover,
+  .button-primary:focus, .button-primary:active {
     color: $primarycolor;
   }
 
-  .eventinfo .eventcontent .eventtime {
-    padding-left: 0;
-    margin-left: 0;
-    border-left: 0px;
-  }
 }
 
 // =======
